--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+     // Global node polyfill.
+     window.global = window;
+   </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
